fix: include configs in conf.d

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,7 @@ http {
 
     include gzip.conf;
     include tls.conf;
+    include conf.d/*.conf;
 
     server {
         listen 80 default_server;
