perf: add some tricks

--- a/gzip.conf
+++ b/gzip.conf
@@ -1,7 +1,6 @@
 gzip on; # http, server, location, if in location
 gzip_comp_level 5; # http, server, location
-gzip_types text/html
-text/css
+gzip_types text/css
 text/xml
 text/javascript
 application/javascript
