--- a/nginx.conf
+++ b/nginx.conf
@@ -31,18 +31,23 @@ http {
     # http3 on; # http, server
     # add_header Alt-Svc 'h3=":443"; ma=86400';
 
+    proxy_set_header Forwarded "for=$proxy_add_x_forwarded_for; host=$host; proto=$scheme";
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
     include gzip.conf;
     include tls.conf;
     include conf.d/*.conf;
 
     server {
         listen 80 default_server;
-        return 302 https://;
+        return 302 https://$host$request_uri;
     }
 
     server {
-        listen 443 default_server ssl reuseport;
-        # listen 443 default_server quic reuseport;
+        listen 443 default_server ssl fastopen=1024 reuseport;
+        listen 443 default_server quic reuseport;
         ssl_reject_handshake on; # http, server
     }
 }
