--- a/tls.conf
+++ b/tls.conf
@@ -5,5 +5,6 @@ ssl_protocols TLSv1.2 TLSv1.3;
 ssl_ecdh_curve X25519:prime256v1:secp384r1;
 ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
 ssl_prefer_server_ciphers off;
-ssl_dhparam ./dhparam;
+ssl_dhparam dhparam;
 ssl_early_data on;
+proxy_set_header Early-Data $ssl_early_data;
