--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@ http {
 
     server {
         listen 80 default_server;
-        return 302 https://$host$request_uri;
+        return https://$host$request_uri;
     }
 
     server {
