--- a/nginx.conf
+++ b/nginx.conf
@@ -27,18 +27,19 @@ http {
 
     http2 on; # http, server
     # http3 on; # http, server
+    # quic_gso on;
 
     include gzip.conf;
     include tls.conf;
 
     server {
-        listen 80 default_server;
+        listen [::]:80 default_server ipv6only=off;
         return https://$host$request_uri;
     }
 
     server {
-        listen 443 default_server ssl fastopen=1024 reuseport;
-        listen 443 default_server quic reuseport;
+        listen [::]:443 default_server ssl ipv6only=off fastopen=1024 reuseport;
+        listen [::]:443 default_server quic ipv6only=off reuseport;
         ssl_reject_handshake on; # http, server
     }
 
