--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ error_log /var/log/nginx/error.log error; # main, http, mail, stream, server, lo
 pid /run/nginx.pid;
 user nginx nginx;
 worker_processes auto;
-# quic_bpf on;
+quic_bpf on;
 
 events {
     worker_connections 1024;
@@ -26,8 +26,10 @@ http {
     keepalive_timeout 70; # SSL 建议值
 
     http2 on; # http, server
-    # http3 on; # http, server
+    http3 on; # http, server
+    # 开启前检查系统是否真正支持 GSO ##
     # quic_gso on;
+    ##############################
 
     include gzip.conf;
     include tls.conf;
