--- a/reverse.conf
+++ b/reverse.conf
@@ -1,7 +1,9 @@
 proxy_set_header Early-Data $ssl_early_data;
-proxy_set_header Host $host:$proxy_port;
-proxy_set_header Forwarded "for=$proxy_add_x_forwarded_for;host=$host:$proxy_port; proto=$scheme";
+# 谨慎使用 `$http_host`，HTTP/3 中 `$http_host` 为空
+# 和 `Host` 相关项，注意当 NGINX 使用非标端口时，应当加上端口
+proxy_set_header Host $host;
+proxy_set_header Forwarded "for=$proxy_add_x_forwarded_for;host=$host; proto=$scheme";
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header X-Forwarded-Host $host:$proxy_port;
+proxy_set_header X-Forwarded-Host $host;
 proxy_set_header X-Forwarded-Proto $scheme;
