--- a/universal.conf
+++ b/universal.conf
@@ -1,4 +1,4 @@
 listen [::]:443 ssl; # server
 listen [::]:443 quic; # server
 add_header Strict-Transport-Security "max-age=63072000" always;
-add_header Alt-Svc 'h3=":443",h2=":443"; ma=63072000';
+add_header Alt-Svc 'h3=":443",h2=":443"; ma=63072000; persist=1';
