feat: enable quic retry and make ssl early data more safer

--- a/nginx.conf
+++ b/nginx.conf
@@ -27,6 +27,7 @@ http {
 
     http2 on; # http, server
     http3 on; # http, server
+    quic_retry on;
     # 开启前检查系统是否真正支持 GSO ##
     # quic_gso on;
     ##############################
