--- a/tls.conf
+++ b/tls.conf
@@ -1,8 +1,7 @@
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 1d;
-ssl_protocols TLSv1.2 TLSv1.3;
-ssl_ecdh_curve X25519:prime256v1:secp384r1;
-ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
-ssl_prefer_server_ciphers off;
-ssl_dhparam dhparam;
+ssl_protocols TLSv1.3;
+ssl_ecdh_curve X25519;
+# 仅当 TLSv1.2 开启时使用，不需要指定 TLSv1.3 加密套件，因为 TLSv1.3 不允许指定加密套件
+# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
 ssl_early_data on;
