--- a/universal.conf
+++ b/universal.conf
@@ -1,9 +1,14 @@
 listen [::]:443 ssl; # server
 listen [::]:443 quic; # server
-add_header Strict-Transport-Security '"max-age=63072000" always';
+add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
+set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
-    if ($request_method !~* (HEAD|OPTIONS)) {
-        return 425;
-    }
+    set $early_is_not_safe 1;
+}
+if ($request_method ~* (HEAD|OPTIONS)) {
+    set $early_is_not_safe 0;
+}
+if ($early_is_not_safe) {
+    return 425;
 }
