feat: choose the most security tls option

--- a/tls.conf
+++ b/tls.conf
@@ -1,7 +1,12 @@
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 1d;
-ssl_protocols TLSv1.3;
-ssl_ecdh_curve X25519;
-# 仅当 TLSv1.2 开启时使用，不需要指定 TLSv1.3 加密套件，因为 TLSv1.3 不允许指定加密套件
-# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
 ssl_early_data on;
+ssl_protocols TLSv1.3;
+ssl_ecdh_curve X25519MLKEM768; # Chrome 不支持 X448
+ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384; # 仅支持指定 TLSv1.3 加密套件
+# TLSv1.2 Compability Support#
+# ssl_protocols TLSv1.2 TLSv1.3;
+# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
+# ssl_ecdh_curve X25519MLKEM768:secp384r1; # Chrome 不支持 secp521r1
+# ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384;
+##############################
