--- a/tls.conf
+++ b/tls.conf
@@ -6,7 +6,7 @@ ssl_ecdh_curve X25519MLKEM768; # Chrome 不支持 X448
 ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384; # 仅支持指定 TLSv1.3 加密套件
 # TLSv1.2 Compability Support#
 # ssl_protocols TLSv1.2 TLSv1.3;
-# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384;
-# ssl_ecdh_curve X25519MLKEM768:secp384r1; # Chrome 不支持 secp521r1
+# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256; # 仅支持指定 TLSv1.2 及以下加密套件
+# ssl_ecdh_curve X25519MLKEM768:X25519:secp384r1:prime256v1;
 # ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384;
 ##############################
