fix: remove the standardlised forwarded header due to the lack of `proxy_add_forwarded` variable (the format of `for` field in the standardlised version is different from the de facto one)

--- a/reverse.conf
+++ b/reverse.conf
@@ -2,7 +2,7 @@ proxy_set_header Early-Data $ssl_early_data;
 # 谨慎使用 `$http_host`，HTTP/3 中 `$http_host` 为空
 # 和 `Host` 相关项，注意当 NGINX 使用非标端口时，应当加上端口
 proxy_set_header Host $host;
-proxy_set_header Forwarded "for=$proxy_add_x_forwarded_for;host=$host; proto=$scheme";
+# 不使用标准化的 `Forwarded` 标头，因为 NGINX 缺乏正确添加 `for` 字段的能力，标准化版本的格式与事实标准不同
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Host $host;
