feat: add ocsp stapling

--- a/tls.conf
+++ b/tls.conf
@@ -1,6 +1,10 @@
+# 签发证书
+# acme.sh --issue -d example.net --dns dns_cf -k ec-384 --ocsp --always-force-new-domain-key
+# acme.sh -i -d example.net --cert-file /etc/ssl/example.net/cert.cer --key-file /etc/ssl/example.net/cert.key --ca-file /etc/ssl/example.net/ca.cer --fullchain-file /etc/ssl/example.net/fullchain.cer --reloadcmd 'sudo service nginx restart'
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 1d;
 ssl_early_data on;
+ssl_stapling on;
 ssl_prefer_server_ciphers on; # `ssl_prefer_server_ciphers` 在 TLSv1.3 中也同样适用
 ssl_protocols TLSv1.3;
 ssl_ecdh_curve X25519MLKEM768; # Chrome 不支持 X448
