fix: change the nginx command from restart to reload and refine the ciphers

--- a/tls.conf
+++ b/tls.conf
@@ -1,17 +1,13 @@
 # 签发证书
 # acme.sh --issue -d example.net --dns dns_cf -k ec-384 --ocsp --always-force-new-domain-key
 # acme.sh -i -d example.net --cert-file /etc/ssl/example.net/cert.cer --key-file /etc/ssl/example.net/cert.key --ca-file /etc/ssl/example.net/ca.cer --fullchain-file /etc/ssl/example.net/fullchain.cer --reloadcmd 'sudo service nginx restart'
-ssl_session_cache shared:SSL:10m;
-ssl_session_timeout 1d;
-ssl_early_data on;
-ssl_stapling on;
-ssl_prefer_server_ciphers on; # `ssl_prefer_server_ciphers` 在 TLSv1.3 中也同样适用
-ssl_protocols TLSv1.3;
-ssl_ecdh_curve X25519MLKEM768; # Chrome 不支持 X448
+# Do not set `ssl_session_cache` due to the introduction of session ticket in TLSv1.2 extension.
+ssl_protocols TLSv1.2 TLSv1.3;
+ssl_prefer_server_ciphers on;
+ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384; # 仅支持指定 TLSv1.2 及以下加密套件
 ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384; # 仅支持指定 TLSv1.3 加密套件
-# TLSv1.2 Compability Support#
-# ssl_protocols TLSv1.2 TLSv1.3;
-# ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384; # 仅支持指定 TLSv1.2 及以下加密套件
-# ssl_ecdh_curve X25519MLKEM768:X25519:secp384r1:prime256v1;
-# ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384;
-##############################
+ssl_ecdh_curve X448MLKEM1024:X25519MLKEM768:X448:X25519; #`ssl_ecdh_curve` 已经脱离了语义，现在不仅可以支持指定 ECDH 所使用的椭圆曲线，并且可以指定一些特定的密钥封装机制，如 X25519MLKEM768。值得注意的是，这些新型的密钥封装机制以签名临时公钥的方式保证了前向安全性。
+ssl_session_timeout 4h;
+ssl_stapling on;
+ssl_stapling_verify on;
+ssl_early_data on;
