--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ pid /run/nginx.pid;
 user nginx nginx;
 worker_processes auto;
 quic_bpf on;
+load_module modules/ngx_http_js_module.so;
 
 events {
     worker_connections 1024;
