fix: openssl cant accept the pervert X448MLKEM1024

--- a/tls.conf
+++ b/tls.conf
@@ -6,7 +6,7 @@ ssl_protocols TLSv1.2 TLSv1.3;
 ssl_prefer_server_ciphers on;
 ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384; # 仅支持指定 TLSv1.2 及以下加密套件
 ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384; # 仅支持指定 TLSv1.3 加密套件
-ssl_ecdh_curve X448MLKEM1024:X25519MLKEM768:X448:X25519; #`ssl_ecdh_curve` 已经脱离了语义，现在不仅可以支持指定 ECDH 所使用的椭圆曲线，并且可以指定一些特定的密钥封装机制，如 X25519MLKEM768。值得注意的是，这些新型的密钥封装机制以签名临时公钥的方式保证了前向安全性。
+ssl_ecdh_curve X25519MLKEM768:X448:X25519; #`ssl_ecdh_curve` 已经脱离了语义，现在不仅可以支持指定 ECDH 所使用的椭圆曲线，并且可以指定一些特定的密钥封装机制，如 X25519MLKEM768。值得注意的是，这些新型的密钥封装机制以签名临时公钥的方式保证了前向安全性。
 ssl_session_timeout 4h;
 ssl_stapling on;
 ssl_stapling_verify on;
