--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-error_log /var/log/nginx/error.log error; # main, http, mail, stream, server, location
+error_log /var/log/nginx/error.log warn; # main, http, mail, stream, server, location
 pid /run/nginx.pid;
 user nginx nginx;
 worker_processes auto;
