feat: add more compression algorithm

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ pid /run/nginx.pid;
 user nginx nginx;
 worker_processes auto;
 quic_bpf on;
-load_module modules/ngx_http_js_module.so;
+include modules.conf;
 
 events {
     worker_connections 1024;
@@ -33,7 +33,7 @@ http {
     # quic_gso on;
     ##############################
 
-    include gzip.conf;
+    include compression.conf;
     include tls.conf;
 
     server {
