--- a/universal.conf
+++ b/universal.conf
@@ -2,6 +2,7 @@ listen [::]:443 ssl; # server
 listen [::]:443 quic; # server
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
+add_header Vary Accept-Encoding;
 set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
