perf: tweak the compression level for 200 Mbps network

--- a/compression.conf
+++ b/compression.conf
@@ -1,3 +1,5 @@
+# All compression level optimized for 200 Mbps (23.84 MiB/s) network for on-the-fly based on the benchmark of [Zstandard](https://github.com/facebook/zstd/blob/dev/doc/images/DCspeed5.png)
+# Formula: W - W / R > B, which W is the compression write speed (in Bytes), R is the ratio, B is the network bandwidth (in Bytes).
 brotli on;
 brotli_comp_level 5;
 
@@ -11,7 +13,7 @@ image/svg+xml
 application/xml;
 
 zstd on;
-zstd_comp_level 12;
+zstd_comp_level 10;
 
 zstd_types application/dart
 application/ecmascript
@@ -64,7 +66,7 @@ text/xml
 text/yaml;
 
 gzip on;
-gzip_comp_level 6;
+gzip_comp_level 5;
 
 gzip_types application/dart
 application/ecmascript
