--- a/compression.conf
+++ b/compression.conf
@@ -3,42 +3,91 @@
 brotli on;
 brotli_comp_level 5;
 
-brotli_types text/css
-text/javascript
-text/ecmascript
-application/javascript
+brotli_types application/atom+xml
+application/dash+xml
 application/ecmascript
+application/gpx+xml
+application/javascript
+application/rdf+xml
+application/rss+xml
+application/soap+xml
+application/vnd.apple.installer+xml
+application/vnd.google-earth.kml+xml
+application/vnd.mozilla.xul+xml
+application/wsdl+xml
 application/x-httpd-php
+application/x-javascript
+application/xhtml+xml
+application/xml
+application/xslt+xml
 image/svg+xml
-application/xml;
+text/css
+text/javascript
+text/ecmascript;
 
 zstd on;
 zstd_comp_level 10;
 
-zstd_types application/dart
+zstd_types application/activity+json
+application/atom+xml
+application/dart
+application/dash+xml
 application/ecmascript
+application/geo+json
+application/gpx+xml
 application/javascript
 application/json
-application/octet-stream
+application/json-patch+json
+application/ld+json
+application/manifest+json
 application/postscript
+application/problem+json
+application/raml+yaml
+application/rdf+xml
+application/rss+xml
 application/rtf
+application/soap+xml
 application/tar
 application/toml
+application/vnd.api+json
+application/vnd.apple.installer+xml
+application/vnd.dart
+application/vnd.google-earth.kml+xml
+application/vnd.mozilla.xul+xml
+application/vnd.ms-fontobject
+application/vnd.ms-opentype
 application/wasm
+application/wsdl+xml
 application/x-httpd-php
+application/x-ipynb+json
 application/x-javascript
 application/x-ns-proxy-autoconfig
 application/x-sh
 application/x-tar
+application/x-virtualbox-hdd
+application/x-virtualbox-ova
+application/x-virtualbox-ovf
+application/x-virtualbox-vbox
+application/x-virtualbox-vdi
+application/x-virtualbox-vhd
+application/x-virtualbox-vmdk
 application/x-www-form-urlencoded
+application/xhtml+xml
 application/xml
 application/xml-dtd
+application/xslt+xml
 font/otf
 font/ttf
-image/svg+xml
 image/bmp
+image/svg+xml
 image/vnd.adobe.photoshop
+image/vnd.microsoft.icon
+image/vnd.ms-dds
+image/x-icon
+image/x-ms-bmp
 message/rfc822
+model/gltf+json
+model/gltf-binary
 text/cache-manifest
 text/calender
 text/cmd
@@ -59,39 +108,79 @@ text/vcard
 text/vtt
 text/x-gwt-rpc
 text/x-jquery-tmpl
+text/x-markdown
 text/x-org
 text/x-processing
 text/x-suse-ymp
 text/xml
-text/yaml;
+text/yaml
+video/lottie+json
+x-shader/x-fragment
+x-shader/x-vertex;
 
 gzip on;
 gzip_comp_level 5;
 
-gzip_types application/dart
+gzip_types application/activity+json
+application/atom+xml
+application/dart
+application/dash+xml
 application/ecmascript
+application/geo+json
+application/gpx+xml
 application/javascript
 application/json
-application/octet-stream
+application/json-patch+json
+application/ld+json
+application/manifest+json
 application/postscript
+application/problem+json
+application/raml+yaml
+application/rdf+xml
+application/rss+xml
 application/rtf
+application/soap+xml
 application/tar
 application/toml
+application/vnd.api+json
+application/vnd.apple.installer+xml
+application/vnd.dart
+application/vnd.google-earth.kml+xml
+application/vnd.mozilla.xul+xml
+application/vnd.ms-fontobject
+application/vnd.ms-opentype
 application/wasm
+application/wsdl+xml
 application/x-httpd-php
+application/x-ipynb+json
 application/x-javascript
 application/x-ns-proxy-autoconfig
 application/x-sh
 application/x-tar
+application/x-virtualbox-hdd
+application/x-virtualbox-ova
+application/x-virtualbox-ovf
+application/x-virtualbox-vbox
+application/x-virtualbox-vdi
+application/x-virtualbox-vhd
+application/x-virtualbox-vmdk
 application/x-www-form-urlencoded
+application/xhtml+xml
 application/xml
 application/xml-dtd
+application/xslt+xml
 font/otf
 font/ttf
-image/svg+xml
 image/bmp
+image/svg+xml
 image/vnd.adobe.photoshop
+image/vnd.microsoft.icon
+image/vnd.ms-dds
+image/x-icon
+image/x-ms-bmp
 message/rfc822
+model/gltf+json
+model/gltf-binary
 text/cache-manifest
 text/calender
 text/cmd
@@ -112,8 +201,12 @@ text/vcard
 text/vtt
 text/x-gwt-rpc
 text/x-jquery-tmpl
+text/x-markdown
 text/x-org
 text/x-processing
 text/x-suse-ymp
 text/xml
-text/yaml;
+text/yaml
+video/lottie+json
+x-shader/x-fragment
+x-shader/x-vertex;
