--- a/reverse.conf
+++ b/reverse.conf
@@ -11,3 +11,4 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $xff;
 proxy_set_header X-Forwarded-Host $host;
 proxy_set_header X-Forwarded-Proto $scheme;
+proxy_set_header Accept-Encoding "";
