feat: give up to protect the unwell implemented backend

--- a/universal.conf
+++ b/universal.conf
@@ -7,7 +7,7 @@ set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
 }
-if ($request_method ~* (HEAD|OPTIONS)) {
+if ($request_method !~* POST|PATCH|CONNECT) {
     set $early_is_not_safe 0;
 }
 if ($early_is_not_safe) {
