refactor: the js files

--- a/reverse.conf
+++ b/reverse.conf
@@ -1,4 +1,4 @@
-js_import js/forwardedFor.js;
+js_import forwardedFor from js/forwarded-for.js;
 js_import js/xff.js;
 js_set $forwarded_for forwardedFor;
 js_set $xff xff;
