feat: add cookie filter

--- a/universal.conf
+++ b/universal.conf
@@ -13,3 +13,5 @@ if ($request_method !~* POST|PATCH|CONNECT) {
 if ($early_is_not_safe) {
     return 425;
 }
+js_import headerFilters from js/header-filters.js;
+js_header_filter headerFilters.cookieFilter;
