feat: move the vary add from nginx conf to js

--- a/universal.conf
+++ b/universal.conf
@@ -1,8 +1,9 @@
 listen [::]:443 ssl; # server
 listen [::]:443 quic; # server
+js_import headerFilters from js/header-filters.js;
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
-add_header Vary Accept-Encoding;
+js_header_filter headerFilters.varyFilter;
 set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
@@ -13,5 +14,4 @@ if ($request_method !~* POST|PATCH|CONNECT) {
 if ($early_is_not_safe) {
     return 425;
 }
-js_import headerFilters from js/header-filters.js;
 js_header_filter headerFilters.cookieFilter;
