fix: make the header filter work properly

--- a/universal.conf
+++ b/universal.conf
@@ -1,10 +1,8 @@
 listen [::]:443 ssl; # server
 listen [::]:443 quic; # server
-js_import headerFilters from js/header-filters.js;
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
-add_header Content-Security-Policy "object-src 'none'; frame-ancestors 'self'; upgrade-insecure-requests";
-js_header_filter headerFilters.varyFilter;
+add_header Content-Security-Policy "object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; upgrade-insecure-requests";
 set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
@@ -15,4 +13,3 @@ if ($request_method !~* POST|PATCH|CONNECT) {
 if ($early_is_not_safe) {
     return 425;
 }
-js_header_filter headerFilters.cookieFilter;
