--- a/universal.conf
+++ b/universal.conf
@@ -3,6 +3,9 @@ listen [::]:443 quic; # server
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
 add_header Content-Security-Policy "object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; upgrade-insecure-requests";
+add_header X-Content-Type-Options nosniff;
+add_header Cross-Origin-Resource-Policy same-site;
+add_header Referrer-Policy strict-origin-when-cross-origin;
 set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
