--- a/universal.conf
+++ b/universal.conf
@@ -1,8 +1,5 @@
-listen [::]:443 ssl; # server
-listen [::]:443 quic; # server
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
-add_header Content-Security-Policy "object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; upgrade-insecure-requests";
 add_header X-Content-Type-Options nosniff;
 add_header Cross-Origin-Resource-Policy same-site;
 add_header Referrer-Policy strict-origin-when-cross-origin;
@@ -16,3 +13,5 @@ if ($request_method !~* POST|PATCH|CONNECT) {
 if ($early_is_not_safe) {
     return 425;
 }
+js_import headerFilters from js/header-filters.js;
+js_header_filter headerFilters.universalFilter;
