--- a/universal.conf
+++ b/universal.conf
@@ -1,8 +1,14 @@
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
-add_header X-Content-Type-Options nosniff;
-add_header Cross-Origin-Resource-Policy same-site;
-add_header Referrer-Policy strict-origin-when-cross-origin;
+if ($upstream_http_x_content_type_options == "") {
+    add_header X-Content-Type-Options nosniff;
+}
+if ($upstream_http_cross_origin_resource_policy == "") {
+    add_header Cross-Origin-Resource-Policy same-site;
+}
+if ($upstream_http_referrer_policy == "") {
+    add_header Referrer-Policy strict-origin-when-cross-origin;
+}
 set $early_is_not_safe 0;
 if ($ssl_early_data = 1) {
     set $early_is_not_safe 1;
