--- a/universal.conf
+++ b/universal.conf
@@ -1,12 +1,12 @@
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains';
 add_header Alt-Svc 'h3=":443", h2=":443"; ma=63072000; persist=1';
-if ($upstream_http_x_content_type_options == "") {
+if ($upstream_http_x_content_type_options = "") {
     add_header X-Content-Type-Options nosniff;
 }
-if ($upstream_http_cross_origin_resource_policy == "") {
+if ($upstream_http_cross_origin_resource_policy = "") {
     add_header Cross-Origin-Resource-Policy same-site;
 }
-if ($upstream_http_referrer_policy == "") {
+if ($upstream_http_referrer_policy = "") {
     add_header Referrer-Policy strict-origin-when-cross-origin;
 }
 set $early_is_not_safe 0;
