chore: remove redunctant config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-error_log /var/log/nginx/error.log warn; # main, http, mail, stream, server, location
+error_log /var/log/nginx/error.log warn;
 pid /run/nginx.pid;
 user nginx nginx;
 worker_processes auto;
@@ -11,23 +11,25 @@ events {
 
 http {
     include mime.types;
-    server_name_in_redirect on; # http, server, location
-    default_type application/octet-stream; # http, server, location
+    server_name_in_redirect on;
+    default_type application/octet-stream;
 
-    # error_page code ... [=[response]] uri; # http, server, location, if in location
+    # error_page code ... [=[response]] uri;
 
-    # reset_timedout_connection on; # http, server, location
     # 启用或禁用重置超时连接和以非标准代码 444 关闭的连接（1.15.2）。重置的过程如下。在关闭套接字之前，将 SO_LINGER 选项设置为超时值为 0。当套接字关闭时，TCP RST 会发送给客户端，并释放该套接字占用的所有内存。这有助于避免将已经关闭的套接字在 FIN_WAIT1 状态下长时间保持已填充的缓冲区。
-    server_tokens off; # http, server, location
+    # reset_timedout_connection on;
+    server_tokens off;
 
+    ######### 文件读取操作 #########
     sendfile on;
-    tcp_nopush on; # http, server, location
-    # 启用或禁用 FreeBSD 上的 TCP_NOPUSH 套接字选项或 Linux 上的 TCP_CORK 套接字选项。这些选项仅在使用 sendfile 时启用。启用该选项允许在 Linux 和 FreeBSD 4.* 中将响应头和文件的开头一起发送在一个数据包中；以完整数据包发送文件。
+    aio threads;
+    tcp_nopush on;
+    ##############################
 
     keepalive_timeout 70; # SSL 建议值
 
-    http2 on; # http, server
-    http3 on; # http, server
+    http2 on;
+    http3 on;
     quic_retry on;
     # 开启前检查系统是否真正支持 GSO ##
     # quic_gso on;
@@ -44,7 +46,7 @@ http {
     server {
         listen [::]:443 default_server ssl ipv6only=off fastopen=1024 reuseport;
         listen [::]:443 default_server quic ipv6only=off reuseport;
-        ssl_reject_handshake on; # http, server
+        ssl_reject_handshake on;
     }
 
     include conf.d/*.conf;
