perf: read file performance

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,38 +1,37 @@
-error_log /var/log/nginx/error.log warn;
-pid /run/nginx.pid;
 user nginx nginx;
+pid /run/nginx.pid;
 worker_processes auto;
+error_log /var/log/nginx/error.log warn;
 quic_bpf on;
 include modules.conf;
 
 events {
     worker_connections 1024;
+    multi_accept on;
 }
 
 http {
-    include mime.types;
-    server_name_in_redirect on;
-    default_type application/octet-stream;
-
-    # error_page code ... [=[response]] uri;
-
-    # 启用或禁用重置超时连接和以非标准代码 444 关闭的连接（1.15.2）。重置的过程如下。在关闭套接字之前，将 SO_LINGER 选项设置为超时值为 0。当套接字关闭时，TCP RST 会发送给客户端，并释放该套接字占用的所有内存。这有助于避免将已经关闭的套接字在 FIN_WAIT1 状态下长时间保持已填充的缓冲区。
-    # reset_timedout_connection on;
     server_tokens off;
-
-    ######### 文件读取操作 #########
-    sendfile on;
-    aio threads;
-    tcp_nopush on;
-    ##############################
+    server_name_in_redirect on;
+    js_engine qjs;
 
     keepalive_timeout 70; # SSL 建议值
+    # 启用或禁用重置超时连接和以非标准代码 444 关闭的连接（1.15.2）。重置的过程如下。在关闭套接字之前，将 SO_LINGER 选项设置为超时值为 0。当套接字关闭时，TCP RST 会发送给客户端，并释放该套接字占用的所有内存。这有助于避免将已经关闭的套接字在 FIN_WAIT1 状态下长时间保持已填充的缓冲区。
+    # reset_timedout_connection on;
 
     http2 on;
     http3 on;
     quic_retry on;
     # 开启前检查系统是否真正支持 GSO ##
     # quic_gso on;
+    ##############################
+
+    include mime.types;
+    default_type application/octet-stream;
+    ######### 文件读取操作 #########
+    sendfile on;
+    aio threads;
+    tcp_nopush on;
     ##############################
 
     include compression.conf;
