fix: the wierd if logic in location block

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,7 @@ http {
     tcp_nopush on;
     ##############################
 
+    include map.conf;
     include compression.conf;
     include tls.conf;
 
