feat: listen the ipv4 and ipv6 spreately

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,13 +39,16 @@ http {
     include tls.conf;
 
     server {
-        listen [::]:80 default_server ipv6only=off;
+        listen 80 default_server fastopen=1024 reuseport;
+        listen [::]:80 default_server fastopen=1024 reuseport;
         return https://$host$request_uri;
     }
 
     server {
-        listen [::]:443 default_server ssl ipv6only=off fastopen=1024 reuseport;
-        listen [::]:443 default_server quic ipv6only=off reuseport;
+        listen 443 default_server ssl fastopen=1024 reuseport;
+        listen 443 default_server quic reuseport;
+        listen [::]:443 default_server ssl fastopen=1024 reuseport;
+        listen [::]:443 default_server quic reuseport;
         ssl_reject_handshake on;
     }
 
