refactor: extract the js import to one file

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,7 @@ http {
     server_tokens off;
     server_name_in_redirect on;
     js_engine qjs;
+    include js-import.conf;
 
     keepalive_timeout 70; # SSL 建议值
     # 启用或禁用重置超时连接和以非标准代码 444 关闭的连接（1.15.2）。重置的过程如下。在关闭套接字之前，将 SO_LINGER 选项设置为超时值为 0。当套接字关闭时，TCP RST 会发送给客户端，并释放该套接字占用的所有内存。这有助于避免将已经关闭的套接字在 FIN_WAIT1 状态下长时间保持已填充的缓冲区。
@@ -31,6 +32,7 @@ http {
     ######### 文件读取操作 #########
     sendfile on;
     aio threads;
+    directio 4M;
     tcp_nopush on;
     ##############################
 
