perf: buffer directives

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,11 +20,20 @@ http {
     # 启用或禁用重置超时连接和以非标准代码 444 关闭的连接（1.15.2）。重置的过程如下。在关闭套接字之前，将 SO_LINGER 选项设置为超时值为 0。当套接字关闭时，TCP RST 会发送给客户端，并释放该套接字占用的所有内存。这有助于避免将已经关闭的套接字在 FIN_WAIT1 状态下长时间保持已填充的缓冲区。
     # reset_timedout_connection on;
 
+    ######### 缓冲区设置 ###########
+    client_body_buffer_size 1M;
+    proxy_buffers 256 16k;
+    http3_stream_buffer_size 2M;
+    ##############################
+
     http2 on;
+    # 对于 DS-Lite 网络，IPv4 流量封装后很可能超过以太网默认 MTU
+    # 1500 Bytes IPv4 + 40 Bytes IPv6 header = 1540 Bytes
+    # 如果出现 HTTP/3 响应冻结的情况，尝试将网卡 MTU 设置成 1460
     http3 on;
     quic_retry on;
     # 开启前检查系统是否真正支持 GSO ##
-    # quic_gso on;
+    quic_gso on;
     ##############################
 
     include mime.types;
