--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ user nginx nginx;
 pid /run/nginx.pid;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
-quic_bpf on;
+# quic_bpf on;
 include modules.conf;
 
 events {
@@ -23,17 +23,17 @@ http {
     ######### 缓冲区设置 ###########
     client_body_buffer_size 1M;
     proxy_buffers 256 16k;
-    http3_stream_buffer_size 2M;
+    # http3_stream_buffer_size 2M;
     ##############################
 
     http2 on;
     # 对于 DS-Lite 网络，IPv4 流量封装后很可能超过以太网默认 MTU
     # 1500 Bytes IPv4 + 40 Bytes IPv6 header = 1540 Bytes
     # 如果出现 HTTP/3 响应冻结的情况，尝试将网卡 MTU 设置成 1460
-    http3 on;
-    quic_retry on;
+    # http3 on;
+    # quic_retry on;
     # 开启前检查系统是否真正支持 GSO ##
-    quic_gso on;
+    # quic_gso on;
     ##############################
 
     include mime.types;
@@ -57,9 +57,9 @@ http {
 
     server {
         listen 443 default_server ssl fastopen=1024 reuseport;
-        listen 443 default_server quic reuseport;
+        # listen 443 default_server quic reuseport;
         listen [::]:443 default_server ssl fastopen=1024 reuseport;
-        listen [::]:443 default_server quic reuseport;
+        # listen [::]:443 default_server quic reuseport;
         ssl_reject_handshake on;
     }
 
