--- a/universal-server.conf
+++ b/universal-server.conf
@@ -1,7 +1,7 @@
 listen 443 ssl;
-listen 443 quic;
+# listen 443 quic;
 listen [::]:443 ssl;
-listen [::]:443 quic;
+# listen [::]:443 quic;
 if ($too_early) {
     return 425;
 }
