feat: use variable in headers rather than hard coded values

--- a/reverse.conf
+++ b/reverse.conf
@@ -3,8 +3,8 @@ js_set $xff forwardedFor.xff;
 proxy_set_header Early-Data $ssl_early_data;
 # 谨慎使用 `$http_host`，HTTP/3 中 `$http_host` 为空
 # 和 `Host` 相关项，注意当 NGINX 使用非标端口时，应当加上端口
-proxy_set_header Host $host;
-proxy_set_header Forwarded 'by=$server_addr; $forwarded_for; host=$host; proto=$scheme';
+proxy_set_header Host $host$port_for_forwarded;
+proxy_set_header Forwarded 'by=$server_addr; $forwarded_for; host=$host$port_for_forwarded; proto=$scheme';
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $xff;
 proxy_set_header X-Forwarded-Host $host;
