--- a/map.conf
+++ b/map.conf
@@ -2,3 +2,8 @@ map $ssl_early_data:$request_method $too_early {
     ~*1:(?:POST|PATCH|CONNECT) 1;
     default 0;
 }
+
+map $server_port $port_for_forwarded {
+    443 "";
+    default ":$server_port";
+}
