--- a/reverse.conf
+++ b/reverse.conf
@@ -7,6 +7,6 @@ proxy_set_header Host $host$port_for_forwarded;
 proxy_set_header Forwarded 'by=$server_addr; $forwarded_for; host=$host$port_for_forwarded; proto=$scheme';
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $xff;
-proxy_set_header X-Forwarded-Host $host;
+proxy_set_header X-Forwarded-Host $host$port_for_forwarded;
 proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header Accept-Encoding "";
